# leptonica

./: CMakeLists.txt  README.md
3rdlibs/libjpeg/: CMakeLists.txt  jconfig.h.cmakein  jdatadst.c  jdmarker.c  jerror.c  jerror.h  jinclude.h  jmemansi.c  jmemmgr.c  jpeglib.h
3rdlibs/libjpeg/contrib/tools/: CMakeLists.txt  jpegtester.cmake
3rdlibs/libjpeg/tools/: CMakeLists.txt  runtest.cmake
3rdlibs/libpng/: CMakeLists.txt  pngread.c  pngwrite.c
3rdlibs/libtiff/: CMakeLists.txt  tif_codec.c  tif_compress.c  tif_config.h.cmakein  tif_dirinfo.c  tif_extension.c  tif_getimage.c  tif_jpeg.c  tif_ojpeg.c  tif_open.c  tif_unix.c  tif_win32.c  tiffio.h  tiffiop.h
3rdlibs/libtiff/contrib/test/: CMakeLists.txt
3rdlibs/libtiff/contrib/tools/: CMakeLists.txt  fax2ps.c
3rdlibs/libtiff/port/: CMakeLists.txt
3rdlibs/libzlib/: CMakeLists.txt  gzguts.h  gzlib.c  gzwrite.c  zlibtester.cmake
3rdlibs/libzlib/contrib/test/: example.c  minigzip.c
3rdlibs/libzlib/tools/: CMakeLists.txt
cmake/: LoadLibs.cmake
prog/: CMakeLists.txt  adaptmap_dark.c  cleanpdf.c  colormorphtest.c  italictest.c  xtractprotos.c
src/: CMakeLists.txt  alltypes.h  array.h  boxfunc1.c  classapp.c  compare.c  environ.h  fhmtauto.c  fmorphauto.c  gplot.c  jbclass.c  libversions.c  parseprotos.c  psio2.c  recogident.c  sarray.c  sel1.c  sel2.c  utils.c  viewfiles.c  writefile.c
