

###############################################################################
# program settings
###############################################################################
add_executable(adaptmap_dark adaptmap_dark.c ${LIBRARY_HEADERS})
add_executable(adaptmaptest adaptmaptest.c ${LIBRARY_HEADERS})
add_executable(adaptnorm_reg adaptnorm_reg.c ${LIBRARY_HEADERS})
add_executable(affine_reg affine_reg.c ${LIBRARY_HEADERS})
add_executable(alltests_reg alltests_reg.c ${LIBRARY_HEADERS})
add_executable(alphaops_reg alphaops_reg.c ${LIBRARY_HEADERS})
add_executable(alphaxform_reg alphaxform_reg.c ${LIBRARY_HEADERS})
add_executable(arabic_lines arabic_lines.c ${LIBRARY_HEADERS})
add_executable(arithtest arithtest.c ${LIBRARY_HEADERS})
add_executable(autogentest1 autogentest1.c ${LIBRARY_HEADERS})
add_executable(barcodetest barcodetest.c ${LIBRARY_HEADERS})
add_executable(baselinetest baselinetest.c ${LIBRARY_HEADERS})
add_executable(bilateral1_reg bilateral1_reg.c ${LIBRARY_HEADERS})
add_executable(bilateral2_reg bilateral2_reg.c ${LIBRARY_HEADERS})
add_executable(bilinear_reg bilinear_reg.c ${LIBRARY_HEADERS})
add_executable(binarize_reg binarize_reg.c ${LIBRARY_HEADERS})
add_executable(binarize_set binarize_set.c ${LIBRARY_HEADERS})
add_executable(binarizefiles binarizefiles.c ${LIBRARY_HEADERS})
add_executable(bincompare bincompare.c ${LIBRARY_HEADERS})
add_executable(binmorph1_reg binmorph1_reg.c ${LIBRARY_HEADERS})
add_executable(binmorph2_reg binmorph2_reg.c ${LIBRARY_HEADERS})
add_executable(binmorph3_reg binmorph3_reg.c ${LIBRARY_HEADERS})
add_executable(binmorph4_reg binmorph4_reg.c ${LIBRARY_HEADERS})
add_executable(binmorph5_reg binmorph5_reg.c ${LIBRARY_HEADERS})
add_executable(blackwhite_reg blackwhite_reg.c ${LIBRARY_HEADERS})
add_executable(blend1_reg blend1_reg.c ${LIBRARY_HEADERS})
add_executable(blend2_reg blend2_reg.c ${LIBRARY_HEADERS})
add_executable(blend3_reg blend3_reg.c ${LIBRARY_HEADERS})
add_executable(blend4_reg blend4_reg.c ${LIBRARY_HEADERS})
add_executable(blendcmaptest blendcmaptest.c ${LIBRARY_HEADERS})
add_executable(boxa1_reg boxa1_reg.c ${LIBRARY_HEADERS})
add_executable(buffertest buffertest.c ${LIBRARY_HEADERS})
add_executable(byteatest byteatest.c ${LIBRARY_HEADERS})
add_executable(ccbordtest ccbordtest.c ${LIBRARY_HEADERS})
add_executable(cctest1 cctest1.c ${LIBRARY_HEADERS})
add_executable(ccthin1_reg ccthin1_reg.c ${LIBRARY_HEADERS})
add_executable(ccthin2_reg ccthin2_reg.c ${LIBRARY_HEADERS})
add_executable(cleanpdf cleanpdf.c ${LIBRARY_HEADERS})
add_executable(cmapquant_reg cmapquant_reg.c ${LIBRARY_HEADERS})
add_executable(colorcontent_reg colorcontent_reg.c ${LIBRARY_HEADERS})
add_executable(coloring_reg coloring_reg.c ${LIBRARY_HEADERS})
add_executable(colorize_reg colorize_reg.c ${LIBRARY_HEADERS})
add_executable(colormask_reg colormask_reg.c ${LIBRARY_HEADERS})
add_executable(colormorphtest colormorphtest.c ${LIBRARY_HEADERS})
add_executable(colorquant_reg colorquant_reg.c ${LIBRARY_HEADERS})
add_executable(colorseg_reg colorseg_reg.c ${LIBRARY_HEADERS})
add_executable(colorsegtest colorsegtest.c ${LIBRARY_HEADERS})
add_executable(colorspace_reg colorspace_reg.c ${LIBRARY_HEADERS})
add_executable(colorspacetest colorspacetest.c ${LIBRARY_HEADERS})
add_executable(compare_reg compare_reg.c ${LIBRARY_HEADERS})
add_executable(comparepages comparepages.c ${LIBRARY_HEADERS})
add_executable(comparetest comparetest.c ${LIBRARY_HEADERS})
add_executable(compfilter_reg compfilter_reg.c ${LIBRARY_HEADERS})
add_executable(concatpdf concatpdf.c ${LIBRARY_HEADERS})
add_executable(conncomp_reg conncomp_reg.c ${LIBRARY_HEADERS})
add_executable(contrasttest contrasttest.c ${LIBRARY_HEADERS})
add_executable(conversion_reg conversion_reg.c ${LIBRARY_HEADERS})
add_executable(convertfilestopdf convertfilestopdf.c ${LIBRARY_HEADERS})
add_executable(convertfilestops convertfilestops.c ${LIBRARY_HEADERS})
add_executable(convertformat convertformat.c ${LIBRARY_HEADERS})
add_executable(convertsegfilestopdf convertsegfilestopdf.c ${LIBRARY_HEADERS})
add_executable(convertsegfilestops convertsegfilestops.c ${LIBRARY_HEADERS})
add_executable(converttogray converttogray.c ${LIBRARY_HEADERS})
add_executable(converttopdf converttopdf.c ${LIBRARY_HEADERS})
add_executable(converttops converttops.c ${LIBRARY_HEADERS})
add_executable(convolve_reg convolve_reg.c ${LIBRARY_HEADERS})
add_executable(convolvetest convolvetest.c ${LIBRARY_HEADERS})
add_executable(cornertest cornertest.c ${LIBRARY_HEADERS})
add_executable(croptest croptest.c ${LIBRARY_HEADERS})
add_executable(croptext croptext.c ${LIBRARY_HEADERS})
add_executable(dewarp_reg dewarp_reg.c ${LIBRARY_HEADERS})
add_executable(dewarprules dewarprules.c ${LIBRARY_HEADERS})
add_executable(dewarptest1 dewarptest1.c ${LIBRARY_HEADERS})
add_executable(dewarptest2 dewarptest2.c ${LIBRARY_HEADERS})
add_executable(dewarptest3 dewarptest3.c ${LIBRARY_HEADERS})
add_executable(dewarptest4 dewarptest4.c ${LIBRARY_HEADERS})
add_executable(dewarptest5 dewarptest5.c ${LIBRARY_HEADERS})
add_executable(digitprep1 digitprep1.c ${LIBRARY_HEADERS})
add_executable(displayboxa displayboxa.c ${LIBRARY_HEADERS})
add_executable(displaypix displaypix.c ${LIBRARY_HEADERS})
add_executable(displaypixa displaypixa.c ${LIBRARY_HEADERS})
add_executable(distance_reg distance_reg.c ${LIBRARY_HEADERS})
add_executable(dithertest dithertest.c ${LIBRARY_HEADERS})
add_executable(dna_reg dna_reg.c ${LIBRARY_HEADERS})
add_executable(dwalineargen dwalineargen.c ${LIBRARY_HEADERS})
add_executable(edgetest edgetest.c ${LIBRARY_HEADERS})
add_executable(enhance_reg enhance_reg.c ${LIBRARY_HEADERS})
add_executable(equal_reg equal_reg.c ${LIBRARY_HEADERS})
add_executable(expand_reg expand_reg.c ${LIBRARY_HEADERS})
add_executable(extrema_reg extrema_reg.c ${LIBRARY_HEADERS})
add_executable(falsecolortest falsecolortest.c ${LIBRARY_HEADERS})
add_executable(fcombautogen fcombautogen.c ${LIBRARY_HEADERS})
add_executable(fhmtauto_reg fhmtauto_reg.c ${LIBRARY_HEADERS})
add_executable(fhmtautogen fhmtautogen.c ${LIBRARY_HEADERS})
add_executable(fileinfo fileinfo.c ${LIBRARY_HEADERS})
add_executable(files_reg files_reg.c ${LIBRARY_HEADERS})
add_executable(findcorners_reg findcorners_reg.c ${LIBRARY_HEADERS})
add_executable(findpattern1 findpattern1.c ${LIBRARY_HEADERS})
add_executable(findpattern2 findpattern2.c ${LIBRARY_HEADERS})
add_executable(findpattern3 findpattern3.c ${LIBRARY_HEADERS})
add_executable(findpattern_reg findpattern_reg.c ${LIBRARY_HEADERS})
add_executable(flipdetect_reg flipdetect_reg.c ${LIBRARY_HEADERS})
add_executable(flipselgen flipselgen.c ${LIBRARY_HEADERS})
add_executable(fmorphauto_reg fmorphauto_reg.c ${LIBRARY_HEADERS})
add_executable(fmorphautogen fmorphautogen.c ${LIBRARY_HEADERS})
add_executable(fpix1_reg fpix1_reg.c ${LIBRARY_HEADERS})
add_executable(fpix2_reg fpix2_reg.c ${LIBRARY_HEADERS})
add_executable(fpixcontours fpixcontours.c ${LIBRARY_HEADERS})
add_executable(gammatest gammatest.c ${LIBRARY_HEADERS})
add_executable(genfonts_reg genfonts_reg.c ${LIBRARY_HEADERS})
add_executable(gifio_leaktest gifio_leaktest.c ${LIBRARY_HEADERS})
add_executable(gifio_reg gifio_reg.c ${LIBRARY_HEADERS})
add_executable(graphicstest graphicstest.c ${LIBRARY_HEADERS})
add_executable(grayfill_reg grayfill_reg.c ${LIBRARY_HEADERS})
add_executable(graymorph1_reg graymorph1_reg.c ${LIBRARY_HEADERS})
add_executable(graymorph2_reg graymorph2_reg.c ${LIBRARY_HEADERS})
add_executable(graymorphtest graymorphtest.c ${LIBRARY_HEADERS})
add_executable(grayquant_reg grayquant_reg.c ${LIBRARY_HEADERS})
add_executable(hardlight_reg hardlight_reg.c ${LIBRARY_HEADERS})
add_executable(heap_reg heap_reg.c ${LIBRARY_HEADERS})
add_executable(histotest histotest.c ${LIBRARY_HEADERS})
add_executable(insert_reg insert_reg.c ${LIBRARY_HEADERS})
add_executable(ioformats_reg ioformats_reg.c ${LIBRARY_HEADERS})
add_executable(iotest iotest.c ${LIBRARY_HEADERS})
add_executable(italictest italictest.c ${LIBRARY_HEADERS})
add_executable(jbcorrelation jbcorrelation.c ${LIBRARY_HEADERS})
add_executable(jbrankhaus jbrankhaus.c ${LIBRARY_HEADERS})
add_executable(jbwords jbwords.c ${LIBRARY_HEADERS})
add_executable(jp2kio_reg jp2kio_reg.c ${LIBRARY_HEADERS})
add_executable(jpegio_reg jpegio_reg.c ${LIBRARY_HEADERS})
add_executable(kernel_reg kernel_reg.c ${LIBRARY_HEADERS})
add_executable(label_reg label_reg.c ${LIBRARY_HEADERS})
add_executable(lineremoval lineremoval.c ${LIBRARY_HEADERS})
add_executable(listtest listtest.c ${LIBRARY_HEADERS})
add_executable(livre_adapt livre_adapt.c ${LIBRARY_HEADERS})
add_executable(livre_hmt livre_hmt.c ${LIBRARY_HEADERS})
add_executable(livre_makefigs livre_makefigs.c ${LIBRARY_HEADERS})
add_executable(livre_orient livre_orient.c ${LIBRARY_HEADERS})
add_executable(livre_pageseg livre_pageseg.c ${LIBRARY_HEADERS})
add_executable(livre_seedgen livre_seedgen.c ${LIBRARY_HEADERS})
add_executable(livre_tophat livre_tophat.c ${LIBRARY_HEADERS})
add_executable(locminmax_reg locminmax_reg.c ${LIBRARY_HEADERS})
add_executable(logicops_reg logicops_reg.c ${LIBRARY_HEADERS})
add_executable(lowaccess_reg lowaccess_reg.c ${LIBRARY_HEADERS})
add_executable(maketile maketile.c ${LIBRARY_HEADERS})
add_executable(maze_reg maze_reg.c ${LIBRARY_HEADERS})
add_executable(misctest1 misctest1.c ${LIBRARY_HEADERS})
add_executable(modifyhuesat modifyhuesat.c ${LIBRARY_HEADERS})
add_executable(morphseq_reg morphseq_reg.c ${LIBRARY_HEADERS})
add_executable(morphtest1 morphtest1.c ${LIBRARY_HEADERS})
add_executable(mtifftest mtifftest.c ${LIBRARY_HEADERS})
add_executable(multitype_reg multitype_reg.c ${LIBRARY_HEADERS})
add_executable(nearline_reg nearline_reg.c ${LIBRARY_HEADERS})
add_executable(newspaper_reg newspaper_reg.c ${LIBRARY_HEADERS})
add_executable(numa1_reg numa1_reg.c ${LIBRARY_HEADERS})
add_executable(numa2_reg numa2_reg.c ${LIBRARY_HEADERS})
add_executable(numaranktest numaranktest.c ${LIBRARY_HEADERS})
add_executable(otsutest1 otsutest1.c ${LIBRARY_HEADERS})
add_executable(otsutest2 otsutest2.c ${LIBRARY_HEADERS})
add_executable(overlap_reg overlap_reg.c ${LIBRARY_HEADERS})
add_executable(pagesegtest1 pagesegtest1.c ${LIBRARY_HEADERS})
add_executable(pagesegtest2 pagesegtest2.c ${LIBRARY_HEADERS})
add_executable(paint_reg paint_reg.c ${LIBRARY_HEADERS})
add_executable(paintmask_reg paintmask_reg.c ${LIBRARY_HEADERS})
add_executable(partitiontest partitiontest.c ${LIBRARY_HEADERS})
add_executable(pdfiotest pdfiotest.c ${LIBRARY_HEADERS})
add_executable(pdfseg_reg pdfseg_reg.c ${LIBRARY_HEADERS})
add_executable(pixa1_reg pixa1_reg.c ${LIBRARY_HEADERS})
add_executable(pixa2_reg pixa2_reg.c ${LIBRARY_HEADERS})
add_executable(pixaatest pixaatest.c ${LIBRARY_HEADERS})
add_executable(pixadisp_reg pixadisp_reg.c ${LIBRARY_HEADERS})
add_executable(pixalloc_reg pixalloc_reg.c ${LIBRARY_HEADERS})
add_executable(pixcomp_reg pixcomp_reg.c ${LIBRARY_HEADERS})
add_executable(pixmem_reg pixmem_reg.c ${LIBRARY_HEADERS})
add_executable(pixserial_reg pixserial_reg.c ${LIBRARY_HEADERS})
add_executable(pixtile_reg pixtile_reg.c ${LIBRARY_HEADERS})
add_executable(plottest plottest.c ${LIBRARY_HEADERS})
add_executable(pngio_reg pngio_reg.c ${LIBRARY_HEADERS})
add_executable(pnmio_reg pnmio_reg.c ${LIBRARY_HEADERS})
add_executable(printimage printimage.c ${LIBRARY_HEADERS})
add_executable(printsplitimage printsplitimage.c ${LIBRARY_HEADERS})
add_executable(printtiff printtiff.c ${LIBRARY_HEADERS})
add_executable(projection_reg projection_reg.c ${LIBRARY_HEADERS})
add_executable(projective_reg projective_reg.c ${LIBRARY_HEADERS})
add_executable(psio_reg psio_reg.c ${LIBRARY_HEADERS})
add_executable(psioseg_reg psioseg_reg.c ${LIBRARY_HEADERS})
add_executable(pta_reg pta_reg.c ${LIBRARY_HEADERS})
add_executable(ptra1_reg ptra1_reg.c ${LIBRARY_HEADERS})
add_executable(ptra2_reg ptra2_reg.c ${LIBRARY_HEADERS})
add_executable(quadtreetest quadtreetest.c ${LIBRARY_HEADERS})
add_executable(rank_reg rank_reg.c ${LIBRARY_HEADERS})
add_executable(rankbin_reg rankbin_reg.c ${LIBRARY_HEADERS})
add_executable(rankhisto_reg rankhisto_reg.c ${LIBRARY_HEADERS})
add_executable(ranktest ranktest.c ${LIBRARY_HEADERS})
add_executable(rasterop_reg rasterop_reg.c ${LIBRARY_HEADERS})
add_executable(rasteropip_reg rasteropip_reg.c ${LIBRARY_HEADERS})
add_executable(recogsort recogsort.c ${LIBRARY_HEADERS})
add_executable(recogtest1 recogtest1.c ${LIBRARY_HEADERS})
add_executable(reducetest reducetest.c ${LIBRARY_HEADERS})
add_executable(removecmap removecmap.c ${LIBRARY_HEADERS})
add_executable(renderfonts renderfonts.c ${LIBRARY_HEADERS})
add_executable(rotate1_reg rotate1_reg.c ${LIBRARY_HEADERS})
add_executable(rotate2_reg rotate2_reg.c ${LIBRARY_HEADERS})
add_executable(rotatefastalt rotatefastalt.c ${LIBRARY_HEADERS})
add_executable(rotateorth_reg rotateorth_reg.c ${LIBRARY_HEADERS})
add_executable(rotateorthtest1 rotateorthtest1.c ${LIBRARY_HEADERS})
add_executable(rotatetest1 rotatetest1.c ${LIBRARY_HEADERS})
add_executable(runlengthtest runlengthtest.c ${LIBRARY_HEADERS})
add_executable(scale_reg scale_reg.c ${LIBRARY_HEADERS})
add_executable(scaleandtile scaleandtile.c ${LIBRARY_HEADERS})
add_executable(scaletest1 scaletest1.c ${LIBRARY_HEADERS})
add_executable(scaletest2 scaletest2.c ${LIBRARY_HEADERS})
add_executable(seedfilltest seedfilltest.c ${LIBRARY_HEADERS})
add_executable(seedspread_reg seedspread_reg.c ${LIBRARY_HEADERS})
add_executable(selio_reg selio_reg.c ${LIBRARY_HEADERS})
add_executable(sharptest sharptest.c ${LIBRARY_HEADERS})
add_executable(shear1_reg shear1_reg.c ${LIBRARY_HEADERS})
add_executable(shear2_reg shear2_reg.c ${LIBRARY_HEADERS})
add_executable(sheartest sheartest.c ${LIBRARY_HEADERS})
add_executable(showedges showedges.c ${LIBRARY_HEADERS})
add_executable(skew_reg skew_reg.c ${LIBRARY_HEADERS})
add_executable(skewtest skewtest.c ${LIBRARY_HEADERS})
add_executable(smallpix_reg smallpix_reg.c ${LIBRARY_HEADERS})
add_executable(smoothedge_reg smoothedge_reg.c ${LIBRARY_HEADERS})
add_executable(snapcolortest snapcolortest.c ${LIBRARY_HEADERS})
add_executable(sorttest sorttest.c ${LIBRARY_HEADERS})
add_executable(splitcomp_reg splitcomp_reg.c ${LIBRARY_HEADERS})
add_executable(splitimage2pdf splitimage2pdf.c ${LIBRARY_HEADERS})
add_executable(string_reg string_reg.c ${LIBRARY_HEADERS})
add_executable(subpixel_reg subpixel_reg.c ${LIBRARY_HEADERS})
add_executable(sudokutest sudokutest.c ${LIBRARY_HEADERS})
add_executable(texturefill_reg texturefill_reg.c ${LIBRARY_HEADERS})
add_executable(threshnorm_reg threshnorm_reg.c ${LIBRARY_HEADERS})
add_executable(translate_reg translate_reg.c ${LIBRARY_HEADERS})
add_executable(trctest trctest.c ${LIBRARY_HEADERS})
add_executable(viewertest viewertest.c ${LIBRARY_HEADERS})
add_executable(warper_reg warper_reg.c ${LIBRARY_HEADERS})
add_executable(warpertest warpertest.c ${LIBRARY_HEADERS})
add_executable(watershedtest watershedtest.c ${LIBRARY_HEADERS})
add_executable(webpio_reg webpio_reg.c ${LIBRARY_HEADERS})
add_executable(wordboxes_reg wordboxes_reg.c ${LIBRARY_HEADERS})
add_executable(wordsinorder wordsinorder.c ${LIBRARY_HEADERS})
add_executable(writemtiff writemtiff.c ${LIBRARY_HEADERS})
add_executable(writetext_reg writetext_reg.c ${LIBRARY_HEADERS})
add_executable(xformbox_reg xformbox_reg.c ${LIBRARY_HEADERS})
add_executable(xtractprotos xtractprotos.c ${LIBRARY_HEADERS})
add_executable(yuvtest yuvtest.c ${LIBRARY_HEADERS})

target_link_libraries(adaptmap_dark ${LEPTONICA})
target_link_libraries(adaptmaptest ${LEPTONICA})
target_link_libraries(adaptnorm_reg ${LEPTONICA})
target_link_libraries(affine_reg ${LEPTONICA})
target_link_libraries(alltests_reg ${LEPTONICA})
target_link_libraries(alphaops_reg ${LEPTONICA})
target_link_libraries(alphaxform_reg ${LEPTONICA})
target_link_libraries(arabic_lines ${LEPTONICA})
target_link_libraries(arithtest ${LEPTONICA})
target_link_libraries(autogentest1 ${LEPTONICA})
target_link_libraries(barcodetest ${LEPTONICA})
target_link_libraries(baselinetest ${LEPTONICA})
target_link_libraries(bilateral1_reg ${LEPTONICA})
target_link_libraries(bilateral2_reg ${LEPTONICA})
target_link_libraries(bilinear_reg ${LEPTONICA})
target_link_libraries(binarize_reg ${LEPTONICA})
target_link_libraries(binarize_set ${LEPTONICA})
target_link_libraries(binarizefiles ${LEPTONICA})
target_link_libraries(bincompare ${LEPTONICA})
target_link_libraries(binmorph1_reg ${LEPTONICA})
target_link_libraries(binmorph2_reg ${LEPTONICA})
target_link_libraries(binmorph3_reg ${LEPTONICA})
target_link_libraries(binmorph4_reg ${LEPTONICA})
target_link_libraries(binmorph5_reg ${LEPTONICA})
target_link_libraries(blackwhite_reg ${LEPTONICA})
target_link_libraries(blend1_reg ${LEPTONICA})
target_link_libraries(blend2_reg ${LEPTONICA})
target_link_libraries(blend3_reg ${LEPTONICA})
target_link_libraries(blend4_reg ${LEPTONICA})
target_link_libraries(blendcmaptest ${LEPTONICA})
target_link_libraries(boxa1_reg ${LEPTONICA})
target_link_libraries(buffertest ${LEPTONICA})
target_link_libraries(byteatest ${LEPTONICA})
target_link_libraries(ccbordtest ${LEPTONICA})
target_link_libraries(cctest1 ${LEPTONICA})
target_link_libraries(ccthin1_reg ${LEPTONICA})
target_link_libraries(ccthin2_reg ${LEPTONICA})
target_link_libraries(cleanpdf ${LEPTONICA})
target_link_libraries(cmapquant_reg ${LEPTONICA})
target_link_libraries(colorcontent_reg ${LEPTONICA})
target_link_libraries(coloring_reg ${LEPTONICA})
target_link_libraries(colorize_reg ${LEPTONICA})
target_link_libraries(colormask_reg ${LEPTONICA})
target_link_libraries(colormorphtest ${LEPTONICA})
target_link_libraries(colorquant_reg ${LEPTONICA})
target_link_libraries(colorseg_reg ${LEPTONICA})
target_link_libraries(colorsegtest ${LEPTONICA})
target_link_libraries(colorspace_reg ${LEPTONICA})
target_link_libraries(colorspacetest ${LEPTONICA})
target_link_libraries(compare_reg ${LEPTONICA})
target_link_libraries(comparepages ${LEPTONICA})
target_link_libraries(comparetest ${LEPTONICA})
target_link_libraries(compfilter_reg ${LEPTONICA})
target_link_libraries(concatpdf ${LEPTONICA})
target_link_libraries(conncomp_reg ${LEPTONICA})
target_link_libraries(contrasttest ${LEPTONICA})
target_link_libraries(conversion_reg ${LEPTONICA})
target_link_libraries(convertfilestopdf ${LEPTONICA})
target_link_libraries(convertfilestops ${LEPTONICA})
target_link_libraries(convertformat ${LEPTONICA})
target_link_libraries(convertsegfilestopdf ${LEPTONICA})
target_link_libraries(convertsegfilestops ${LEPTONICA})
target_link_libraries(converttogray ${LEPTONICA})
target_link_libraries(converttopdf ${LEPTONICA})
target_link_libraries(converttops ${LEPTONICA})
target_link_libraries(convolve_reg ${LEPTONICA})
target_link_libraries(convolvetest ${LEPTONICA})
target_link_libraries(cornertest ${LEPTONICA})
target_link_libraries(croptest ${LEPTONICA})
target_link_libraries(croptext ${LEPTONICA})
target_link_libraries(dewarp_reg ${LEPTONICA})
target_link_libraries(dewarprules ${LEPTONICA})
target_link_libraries(dewarptest1 ${LEPTONICA})
target_link_libraries(dewarptest2 ${LEPTONICA})
target_link_libraries(dewarptest3 ${LEPTONICA})
target_link_libraries(dewarptest4 ${LEPTONICA})
target_link_libraries(dewarptest5 ${LEPTONICA})
target_link_libraries(digitprep1 ${LEPTONICA})
target_link_libraries(displayboxa ${LEPTONICA})
target_link_libraries(displaypix ${LEPTONICA})
target_link_libraries(displaypixa ${LEPTONICA})
target_link_libraries(distance_reg ${LEPTONICA})
target_link_libraries(dithertest ${LEPTONICA})
target_link_libraries(dna_reg ${LEPTONICA})
target_link_libraries(dwalineargen ${LEPTONICA})
target_link_libraries(edgetest ${LEPTONICA})
target_link_libraries(enhance_reg ${LEPTONICA})
target_link_libraries(equal_reg ${LEPTONICA})
target_link_libraries(expand_reg ${LEPTONICA})
target_link_libraries(extrema_reg ${LEPTONICA})
target_link_libraries(falsecolortest ${LEPTONICA})
target_link_libraries(fcombautogen ${LEPTONICA})
target_link_libraries(fhmtauto_reg ${LEPTONICA})
target_link_libraries(fhmtautogen ${LEPTONICA})
target_link_libraries(fileinfo ${LEPTONICA})
target_link_libraries(files_reg ${LEPTONICA})
target_link_libraries(findcorners_reg ${LEPTONICA})
target_link_libraries(findpattern1 ${LEPTONICA})
target_link_libraries(findpattern2 ${LEPTONICA})
target_link_libraries(findpattern3 ${LEPTONICA})
target_link_libraries(findpattern_reg ${LEPTONICA})
target_link_libraries(flipdetect_reg ${LEPTONICA})
target_link_libraries(flipselgen ${LEPTONICA})
target_link_libraries(fmorphauto_reg ${LEPTONICA})
target_link_libraries(fmorphautogen ${LEPTONICA})
target_link_libraries(fpix1_reg ${LEPTONICA})
target_link_libraries(fpix2_reg ${LEPTONICA})
target_link_libraries(fpixcontours ${LEPTONICA})
target_link_libraries(gammatest ${LEPTONICA})
target_link_libraries(genfonts_reg ${LEPTONICA})
target_link_libraries(gifio_leaktest ${LEPTONICA})
target_link_libraries(gifio_reg ${LEPTONICA})
target_link_libraries(graphicstest ${LEPTONICA})
target_link_libraries(grayfill_reg ${LEPTONICA})
target_link_libraries(graymorph1_reg ${LEPTONICA})
target_link_libraries(graymorph2_reg ${LEPTONICA})
target_link_libraries(graymorphtest ${LEPTONICA})
target_link_libraries(grayquant_reg ${LEPTONICA})
target_link_libraries(hardlight_reg ${LEPTONICA})
target_link_libraries(heap_reg ${LEPTONICA})
target_link_libraries(histotest ${LEPTONICA})
target_link_libraries(insert_reg ${LEPTONICA})
target_link_libraries(ioformats_reg ${LEPTONICA})
target_link_libraries(iotest ${LEPTONICA})
target_link_libraries(italictest ${LEPTONICA})
target_link_libraries(jbcorrelation ${LEPTONICA})
target_link_libraries(jbrankhaus ${LEPTONICA})
target_link_libraries(jbwords ${LEPTONICA})
target_link_libraries(jp2kio_reg ${LEPTONICA})
target_link_libraries(jpegio_reg ${LEPTONICA})
target_link_libraries(kernel_reg ${LEPTONICA})
target_link_libraries(label_reg ${LEPTONICA})
target_link_libraries(lineremoval ${LEPTONICA})
target_link_libraries(listtest ${LEPTONICA})
target_link_libraries(livre_adapt ${LEPTONICA})
target_link_libraries(livre_hmt ${LEPTONICA})
target_link_libraries(livre_makefigs ${LEPTONICA})
target_link_libraries(livre_orient ${LEPTONICA})
target_link_libraries(livre_pageseg ${LEPTONICA})
target_link_libraries(livre_seedgen ${LEPTONICA})
target_link_libraries(livre_tophat ${LEPTONICA})
target_link_libraries(locminmax_reg ${LEPTONICA})
target_link_libraries(logicops_reg ${LEPTONICA})
target_link_libraries(lowaccess_reg ${LEPTONICA})
target_link_libraries(maketile ${LEPTONICA})
target_link_libraries(maze_reg ${LEPTONICA})
target_link_libraries(misctest1 ${LEPTONICA})
target_link_libraries(modifyhuesat ${LEPTONICA})
target_link_libraries(morphseq_reg ${LEPTONICA})
target_link_libraries(morphtest1 ${LEPTONICA})
target_link_libraries(mtifftest ${LEPTONICA})
target_link_libraries(multitype_reg ${LEPTONICA})
target_link_libraries(nearline_reg ${LEPTONICA})
target_link_libraries(newspaper_reg ${LEPTONICA})
target_link_libraries(numa1_reg ${LEPTONICA})
target_link_libraries(numa2_reg ${LEPTONICA})
target_link_libraries(numaranktest ${LEPTONICA})
target_link_libraries(otsutest1 ${LEPTONICA})
target_link_libraries(otsutest2 ${LEPTONICA})
target_link_libraries(overlap_reg ${LEPTONICA})
target_link_libraries(pagesegtest1 ${LEPTONICA})
target_link_libraries(pagesegtest2 ${LEPTONICA})
target_link_libraries(paint_reg ${LEPTONICA})
target_link_libraries(paintmask_reg ${LEPTONICA})
target_link_libraries(partitiontest ${LEPTONICA})
target_link_libraries(pdfiotest ${LEPTONICA})
target_link_libraries(pdfseg_reg ${LEPTONICA})
target_link_libraries(pixa1_reg ${LEPTONICA})
target_link_libraries(pixa2_reg ${LEPTONICA})
target_link_libraries(pixaatest ${LEPTONICA})
target_link_libraries(pixadisp_reg ${LEPTONICA})
target_link_libraries(pixalloc_reg ${LEPTONICA})
target_link_libraries(pixcomp_reg ${LEPTONICA})
target_link_libraries(pixmem_reg ${LEPTONICA})
target_link_libraries(pixserial_reg ${LEPTONICA})
target_link_libraries(pixtile_reg ${LEPTONICA})
target_link_libraries(plottest ${LEPTONICA})
target_link_libraries(pngio_reg ${LEPTONICA})
target_link_libraries(pnmio_reg ${LEPTONICA})
target_link_libraries(printimage ${LEPTONICA})
target_link_libraries(printsplitimage ${LEPTONICA})
target_link_libraries(printtiff ${LEPTONICA})
target_link_libraries(projection_reg ${LEPTONICA})
target_link_libraries(projective_reg ${LEPTONICA})
target_link_libraries(psio_reg ${LEPTONICA})
target_link_libraries(psioseg_reg ${LEPTONICA})
target_link_libraries(pta_reg ${LEPTONICA})
target_link_libraries(ptra1_reg ${LEPTONICA})
target_link_libraries(ptra2_reg ${LEPTONICA})
target_link_libraries(quadtreetest ${LEPTONICA})
target_link_libraries(rank_reg ${LEPTONICA})
target_link_libraries(rankbin_reg ${LEPTONICA})
target_link_libraries(rankhisto_reg ${LEPTONICA})
target_link_libraries(ranktest ${LEPTONICA})
target_link_libraries(rasterop_reg ${LEPTONICA})
target_link_libraries(rasteropip_reg ${LEPTONICA})
target_link_libraries(recogsort ${LEPTONICA})
target_link_libraries(recogtest1 ${LEPTONICA})
target_link_libraries(reducetest ${LEPTONICA})
target_link_libraries(removecmap ${LEPTONICA})
target_link_libraries(renderfonts ${LEPTONICA})
target_link_libraries(rotate1_reg ${LEPTONICA})
target_link_libraries(rotate2_reg ${LEPTONICA})
target_link_libraries(rotatefastalt ${LEPTONICA})
target_link_libraries(rotateorth_reg ${LEPTONICA})
target_link_libraries(rotateorthtest1 ${LEPTONICA})
target_link_libraries(rotatetest1 ${LEPTONICA})
target_link_libraries(runlengthtest ${LEPTONICA})
target_link_libraries(scale_reg ${LEPTONICA})
target_link_libraries(scaleandtile ${LEPTONICA})
target_link_libraries(scaletest1 ${LEPTONICA})
target_link_libraries(scaletest2 ${LEPTONICA})
target_link_libraries(seedfilltest ${LEPTONICA})
target_link_libraries(seedspread_reg ${LEPTONICA})
target_link_libraries(selio_reg ${LEPTONICA})
target_link_libraries(sharptest ${LEPTONICA})
target_link_libraries(shear1_reg ${LEPTONICA})
target_link_libraries(shear2_reg ${LEPTONICA})
target_link_libraries(sheartest ${LEPTONICA})
target_link_libraries(showedges ${LEPTONICA})
target_link_libraries(skew_reg ${LEPTONICA})
target_link_libraries(skewtest ${LEPTONICA})
target_link_libraries(smallpix_reg ${LEPTONICA})
target_link_libraries(smoothedge_reg ${LEPTONICA})
target_link_libraries(snapcolortest ${LEPTONICA})
target_link_libraries(sorttest ${LEPTONICA})
target_link_libraries(splitcomp_reg ${LEPTONICA})
target_link_libraries(splitimage2pdf ${LEPTONICA})
target_link_libraries(string_reg ${LEPTONICA})
target_link_libraries(subpixel_reg ${LEPTONICA})
target_link_libraries(sudokutest ${LEPTONICA})
target_link_libraries(texturefill_reg ${LEPTONICA})
target_link_libraries(threshnorm_reg ${LEPTONICA})
target_link_libraries(translate_reg ${LEPTONICA})
target_link_libraries(trctest ${LEPTONICA})
target_link_libraries(viewertest ${LEPTONICA})
target_link_libraries(warper_reg ${LEPTONICA})
target_link_libraries(warpertest ${LEPTONICA})
target_link_libraries(watershedtest ${LEPTONICA})
target_link_libraries(webpio_reg ${LEPTONICA})
target_link_libraries(wordboxes_reg ${LEPTONICA})
target_link_libraries(wordsinorder ${LEPTONICA})
target_link_libraries(writemtiff ${LEPTONICA})
target_link_libraries(writetext_reg ${LEPTONICA})
target_link_libraries(xformbox_reg ${LEPTONICA})
target_link_libraries(xtractprotos ${LEPTONICA})
target_link_libraries(yuvtest ${LEPTONICA})
